--- a/app/src/utilities/variables.scss
+++ b/app/src/utilities/variables.scss
@@ -142,38 +142,37 @@ $custom-colors: null !default;
 $custom-shades: null !default;
 
 $colors: mergeColorMaps((
-  "white": ($white, findColorInvert($white)), 
-  "black": ($black, findColorInvert($black)), 
-  "light": ($light, $light-invert), 
-  "dark": ($dark, $dark-invert), 
-  "primary": ($primary, $primary-invert), 
-  "secondary": ($secondary, $secondary-invert), 
-  "link": ($link, $link-invert), 
-  "info": ($info, $info-invert), 
-  "success": ($success, $success-invert), 
-  "warning": ($warning, $warning-invert), 
+  "white": ($white, findColorInvert($white)),
+  "black": ($black, findColorInvert($black)),
+  "light": ($light, $light-invert),
+  "dark": ($dark, $dark-invert),
+  "primary": ($primary, $primary-invert),
+  "secondary": ($secondary, $secondary-invert),
+  "link": ($link, $link-invert),
+  "info": ($info, $info-invert),
+  "success": ($success, $success-invert),
+  "warning": ($warning, $warning-invert),
   "danger": ($danger, $danger-invert)
 ), $custom-colors);
 
 $shades: mergeColorMaps((
-  "black-bis": $black-bis, 
-  "black-ter": $black-ter, 
-  "grey-darker": $grey-darker, 
-  "grey-dark": $grey-dark, 
-  "grey": $grey, 
-  "grey-light": $grey-light, 
-  "grey-lighter": $grey-lighter, 
-  "grey-lightest": $grey-lightest, 
-  "white-ter": $white-ter, 
+  "black-bis": $black-bis,
+  "black-ter": $black-ter,
+  "grey-darker": $grey-darker,
+  "grey-dark": $grey-dark,
+  "grey": $grey,
+  "grey-light": $grey-light,
+  "grey-lighter": $grey-lighter,
+  "grey-lightest": $grey-lightest,
+  "white-ter": $white-ter,
   "white-bis": $white-bis
 ), $custom-shades);
 
 // Responsive Breakpoint
-// mobile up to 767px;  
-$mobile-use-tablet-layout: false !default;
-$mobile-use-desktop-layout: false !default;
+// mobile up to 767px;
+$non-responsive-mobile: false !default;
+$non-responsive-tablet: false !default;
 $tablet: 768px !default; // tablet size by chrome's device toolbar                      // for 768 (ipad portrait)
-$tablet-use-desktop-layout: false !default;
 $desktop: 1024px !default; // desktop size by chrome's device toolbar, 768 + 256 = 1024 // for 1024 (ipad landscape) (ipad pro portrait)
 $widescreen: 1280px !default;  // widescreen size by bulma default, 1024 + 256 = 1280   // for 1280, 1366 (ipad pro landscape), 1440
 $widescreen-enabled: true !default;
