--- a/app/src/helpers/other.scss
+++ b/app/src/helpers/other.scss
@@ -1,5 +1,6 @@
 $box-shadow-for-has-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default;
 $box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default;
+$input-arrow-size: 0.625em !default;
 
 // Vertical Align: only affects inline, inline-block, inline-table, and table cell
 .is-vertical-top {
