--- a/app/src/utilities/mixins.scss
+++ b/app/src/utilities/mixins.scss
@@ -1,4 +1,5 @@
 @import '../bulma-mixins-without-import'; /* to avoid override var when import this file before */
+$input-arrow-size: 0.625em !default;
 
 /* IE10+ CSS styles go here */
 @mixin ie {
