--- a/app/src/helpers/other.scss
+++ b/app/src/helpers/other.scss
@@ -75,7 +75,7 @@ $input-arrow-size: 0.625em !default;
   }
 
   &:after {
-    content: ' ';
+    content: " ";
     position: absolute;
     top: 0;
     left: 0;
