--- a/app/src/form/radio.scss
+++ b/app/src/form/radio.scss
@@ -1,32 +1,27 @@
 $radio-border-color: $primary !default;
 $radio-background-color: $primary !default;
 $radio-size: 1em !default;
-$radio-inner-size: $radio-size - 0.5em !default;
+$radio-inner-size: $radio-size / 5 !default;
 $radio-bg-size: $radio-size + 0.5 !default;
 
 .radio {
   line-height: $radio-size;
-  position: relative;
+  display: inline-flex;
+  align-items: center;
 
   &.has-bg {
     display: inline-flex;
     align-items: center;
 
     input[type=radio] {
+      position: absolute;
+
       &+span {
         padding-left: $radio-bg-size + 0.5em;
         padding-right: 0.5em;
         line-height: $radio-bg-size;
         border: 1px solid $border;
         margin-left: 0;
-
-        &::before {
-          // old circle line will be behind radio-bg when has-bg
-        }
-        &::after {
-          top: calc( #{($radio-size / 2) - ($radio-inner-size / 2) + ($radio-bg-size / 2) - ($radio-size / 2)} + 1px);
-          left: calc( #{($radio-size / 2) - ($radio-inner-size / 2) + ($radio-bg-size / 2) - ($radio-size / 2)} + 1px);
-        }
       }
     }
 
@@ -43,11 +38,22 @@ $radio-bg-size: $radio-size + 0.5 !default;
         position: absolute;
         content: "";
         border: 1px solid $border;
-        border-radius: 100%;
+        border-radius: 50%;
         height: $radio-size;
         width: $radio-size;
         top: ($radio-bg-size / 2) - ($radio-size / 2);
         left: ($radio-bg-size / 2) - ($radio-size / 2);
+      }
+    }
+
+    input[type=radio]:checked {
+      &+span {
+        .radio-bg {
+          &::after {
+            border-color: $scheme-main;
+            border-width: $radio-inner-size;
+          }
+        }
       }
     }
   }
@@ -61,42 +67,22 @@ $radio-bg-size: $radio-size + 0.5 !default;
   }
 
   input[type=radio] {
-    position: absolute;
-    visibility: hidden;
+    font-size: 1em;
+    height: $radio-size;
+    width: $radio-size;
+    border: 1px solid $border;
+    border-radius: 50%;
+    appearance: none;
 
     &+span {
-      padding-left: $radio-size;
       margin-left: $brick-spacing;
       display: inline-block;
-
-      &::before {
-        position: absolute;
-        content: "";
-        border: 1px solid $border;
-        border-radius: 100%;
-        height: $radio-size;
-        width: $radio-size;
-        top: 0;
-        left: 0;
-      }
-
-      &::after {
-        position: absolute;
-        content: "";
-        border-radius: 100%;
-        height: $radio-inner-size;
-        width: $radio-inner-size;
-        top: ($radio-size / 2) - ($radio-inner-size / 2);
-        left: ($radio-size / 2) - ($radio-inner-size / 2);
-      }
     }
 
-    &:checked+span::before {
+    &:checked {
       border-color: $radio-border-color;
-    }
-
-    &:checked+span::after {
       background: $radio-background-color;
+      box-shadow: inset 0 0 0 $radio-inner-size $scheme-main;
     }
   }
 
@@ -104,10 +90,8 @@ $radio-bg-size: $radio-size + 0.5 !default;
     $color: nth($pair, 1);
     $color-invert: nth($pair, 2);
     &.is-#{$name} {
-      input[type=radio]:checked+span::before {
+      input[type=radio]:checked {
         border-color: $color;
-      }
-      input[type=radio]:checked+span::after {
         background: $color;
       }
 
